# netkit-cdk

./: .forbidden_modules  .gitignore  .perlcriticrc  CMakeLists.txt  Interface.pm  Lab.pm  MANIFEST  Machine.pm  Makefile.PL  README.md  Route.pm  Spec.md  main.cpp  main.pl
.github/workflows/: build-package.yaml
lib/: Attachment.cpp  Attachment.h  Interface.cpp  Interface.h  Lab.cpp  Lab.h  Lan.cpp  Lan.h  Machine.cpp  Machine.h  Machine.pm  Netkit.pm  Route.cpp  Route.h  Route.pm  Rule.cpp  Rule.h
lib/Netkit/: Attachment.pm  Interface.pm  Lab.pm  Lan.pm  Machine.pm  Route.pm  Rule.pm  Vlan.pm
swig/: Makefile  Netkit.i  test.pl
